# tracker

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py
backend/api/: cards.py  events.py  projects.py  search.py  webhooks.py
backend/mcp/: resources.py  server.py  tools.py
backend/scanner/: detector.py  git_info.py
backend/services/: context_bundle.py  webhooks.py
backend/tests/: test_api_cards.py  test_api_events.py  test_api_projects.py  test_api_search.py  test_models.py  test_scanner.py  test_webhooks.py
backend/ws/: manager.py  router.py
docs/superpowers/plans/: 2026-04-02-tracker-implementation.md
docs/superpowers/specs/: 2026-04-02-tracker-design.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddCardModal.tsx  BoardHeader.tsx  CardDetail.tsx  CardItem.tsx  KanbanBoard.tsx  ListView.tsx  LogStream.tsx  ProjectTabs.tsx
frontend/src/hooks/: useProjectSocket.ts
frontend/src/store/: index.ts
